--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         skin Cici P.Ace.  Jika Anda hendak menggunakan file ini, pastikan gambar
         pendukung (5cc8020d-5259-4542-8e15-61c5d85dce03.png) berada dalam folder yang sama.
     -->
-    <title>Uranus Fazry MLBB Portal | Cici P.Ace Portal</title>
+    <title>UranusFazry MLBB Portal | Cici P.Ace Portal</title>
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -622,7 +622,7 @@
                 <!-- Logo -->
                 <div id="logo-container" style="display: flex; align-items: center; cursor: pointer; user-select: none; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none;">
                     <!-- Mengganti logo gambar Bane dengan gambar avatar Cici P.Ace -->
-                    <img src="5cc8020d-5259-4542-8e15-61c5d85dce03.png" alt="Cici P.Ace Logo" class="logo-pulse" style="height: 50px; width: 50px; border-radius: 50%; object-fit: cover;" draggable="false">
+                    <img src="https://i.imghippo.com/files/EePl9866XxI.png" alt="Cici P.Ace Logo" class="logo-pulse" style="height: 50px; width: 50px; border-radius: 50%; object-fit: cover;" draggable="false">
                     <span class="font-cinzel gold-text" style="font-weight: 700; font-size: 1.25rem; letter-spacing: 0.05em; margin-left: 1rem;">MLBB CICI P.ACE</span>
                 </div>
 
@@ -878,7 +878,7 @@
             const defaultPortals = [
                 { 
                     name: 'Cici P.Ace Premium Access',
-                    url: 'https://api.whatsapp.com/send/?phone=6287872521809&text=Halo%2C+saya+ingin+membeli+Akses+Premium+Cici+P.Ace+Portal+sebesar+Rp25.000.+Mohon+transfer+ke+DANA+087734421123+dan+kirimkan+bukti+pembayarannya.+Pesanan+akan+diproses+maksimal+1x24+jam.+Terima+kasih.&type=phone_number&app_absent=0',
+                    url: 'https://api.whatsapp.com/send/?phone=6287872521809&text=Halo%2C+saya+ingin+membeli+Akses+Website+Premium+Tanpa+Iklan+sebesar+Rp25.000.+Mohon+transfer+ke+DANA+087734421123+dan+kirimkan+bukti+pembayarannya.+Pesanan+akan+diproses+maksimal+1x24+jam.+Terima+kasih.&type=phone_number&app_absent=0',
                     icon: 'fas fa-gem',
                     color: '#ffd700',
                     description: 'Upgrade sekarang — akses semua website uranus tanpa iklan cuma Rp25K'
